tests/lean/621.lean.expected.out
621.lean:4:45-4:47: error: Failed to coerce
  xs
to a type: After applying `CoeSort.coe`, result is still not a type
  xs.val

Hint: This is often due to incorrect `CoeSort` instances; the synthesized instance was
  inst621 ϕ
